[gd_scene load_steps=19 format=3 uid="uid://c4a8wugy53o8b"]

[ext_resource type="Texture2D" uid="uid://cdsx3fu5r46hn" path="res://Art/Minion/Minion.png" id="1"]
[ext_resource type="FontFile" uid="uid://b3oc3cmab4uoi" path="res://Font/PressStart2P-Regular.ttf" id="2"]
[ext_resource type="Theme" uid="uid://b61jb6phcitpv" path="res://Font/Themes/DescriptionFont.tres" id="3"]
[ext_resource type="Script" path="res://Scripts/UI/Description/PeepleUI.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://doqh76i832peh" path="res://Art/UI/XButtonIcon.png" id="5"]
[ext_resource type="PackedScene" uid="uid://cvs863yxqhoot" path="res://Prefab/UI/PeepleUI/WorkDetails.tscn" id="5_xxe8b"]
[ext_resource type="PackedScene" uid="uid://ds5gshgfrx5ku" path="res://Prefab/UI/PeepleUI/HouseDetails.tscn" id="5_yr1vd"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.623529, 0.623529, 0.623529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="2"]
Panel/styles/panel = SubResource("1")

[sub_resource type="FontFile" id="10"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/13/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="StyleBoxFlat" id="12"]
bg_color = Color(0.0588235, 0.458824, 0.14902, 1)

[sub_resource type="Theme" id="13"]
Button/fonts/font = SubResource("11")
Button/styles/normal = SubResource("12")

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/1/0/ascent = 0.0
cache/0/1/0/descent = 0.0
cache/0/1/0/underline_position = 0.0
cache/0/1/0/underline_thickness = 0.0
cache/0/1/0/scale = 1.0
cache/0/1/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/1/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/1/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)

[sub_resource type="Theme" id="6"]
default_font = SubResource("5")
default_font_size = 8

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="9"]
ProgressBar/styles/bg = SubResource("7")
ProgressBar/styles/fg = SubResource("8")

[node name="PeepleUI" type="Panel"]
offset_right = 204.0
offset_bottom = 85.0
theme = SubResource("2")
script = ExtResource("4")

[node name="LeftSide" type="Control" parent="."]
anchors_preset = 0
offset_left = -7.0
offset_top = 6.0
offset_right = 83.0
offset_bottom = 87.0

[node name="PeepleFace" type="Sprite2D" parent="LeftSide"]
position = Vector2(40, 11)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1")
centered = false

[node name="PeepleName" type="Label" parent="LeftSide"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 19.0
offset_top = 34.0
offset_right = 124.0
offset_bottom = 47.0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 2
theme = ExtResource("3")
theme_override_fonts/font = SubResource("10")
text = "Super LongName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FollowButton" type="Button" parent="LeftSide"]
layout_mode = 0
offset_left = 13.0
offset_top = 46.0
offset_right = 163.0
offset_bottom = 66.0
scale = Vector2(0.5, 0.5)
theme = SubResource("13")
text = "FOLLOW"

[node name="RightSide" type="Control" parent="."]
anchors_preset = 0
offset_left = -7.0
offset_top = 6.0
offset_right = 33.0
offset_bottom = 46.0

[node name="HappinessLabel" type="Label" parent="RightSide"]
layout_mode = 0
offset_left = 113.0
offset_top = -2.0
offset_right = 212.0
offset_bottom = 9.0
theme = SubResource("6")
text = "Happiness"

[node name="ProgressBar" type="ProgressBar" parent="RightSide"]
custom_minimum_size = Vector2(80, 8)
layout_mode = 0
offset_left = 114.0
offset_top = 10.0
offset_right = 214.0
offset_bottom = 37.0
scale = Vector2(0.5, 0.5)
theme = SubResource("9")
value = 20.0

[node name="HouseControl" parent="RightSide" instance=ExtResource("5_yr1vd")]
offset_left = 113.0
offset_top = 27.0
offset_right = 182.0
offset_bottom = 45.0

[node name="WorkControl" parent="RightSide" instance=ExtResource("5_xxe8b")]
offset_left = 113.0
offset_top = 47.0
offset_right = 178.0
offset_bottom = 65.0

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 186.0
offset_right = 230.0
offset_bottom = 40.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("5")

[connection signal="button_up" from="LeftSide/FollowButton" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="ExitButton" to="." method="_on_ToolButton_button_up"]
